--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
   },
   "dependencies": {
     "@next/eslint-plugin-next": "^14.1.4",
+    "@portabletext/react": "^3.0.18",
     "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toggle": "^1.0.3",
+    "@sanity/client": "^6.15.14",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.37.2",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@types/qrcode": "^1.5.5",
@@ -31,18 +31,22 @@
     "input-otp": "^1.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.340.0",
-    "next": "^14.1.1",
+    "next": "^14.1.4",
+    "next-sanity": "^7.1.4",
     "postcss": "8.4.33",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "^0.33.3",
+    "sanity": "^3.37.2",
+    "server-only": "^0.0.1",
+    "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.12",
     "@types/lodash": "^4.14.202",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
