--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "resend": "^3.2.0",
     "sanity": "^3.37.2",
     "server-only": "^0.0.1",
     "styled-components": "^6.1.8",
