--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@
 
 NEXT_PUBLIC_SANITY_PROJECT_ID="97nnfbp7"
 NEXT_PUBLIC_SANITY_DATASET="production"
+RESEND_API_KEY=re_QHHg8jVs_cahyhYkeWtCVwrRoLN3WtEzE
